# spotify-archive

./: .env.example  .gitignore  .gitmodules  README.md  _listen.py  _main.py  _tasks.py  channel.py  dev.ipynb  index.html  package.json  requirements.txt  submodule.sh  tsconfig.json
__pycache__/: .._oauth.cpython-38 2.pyc.icloud
app/: app.py
app/flutter_spotify/: .pubspec 2.yaml.icloud  README.md  pubspec.yaml
app/flutter_spotify/android/: .build 2.gradle.icloud
app/flutter_spotify/android/app/: build.gradle  (+1 more)
app/flutter_spotify/ios/: .Runner 2.xcodeproj.icloud  .Runner 2.xcworkspace.icloud
app/flutter_spotify/lib/: .app 2.dart.icloud  .main 2.dart.icloud  .theme 2.dart.icloud  .web 2.dart.icloud  main.dart  web.dart
app/flutter_spotify/test/: .widget_test 2.dart.icloud  widget_test.dart
app/listen/: .gitignore  index.html  package.json  tsconfig.vite
app/lstn/: index.html  package.json
app/lstn/src/: App.tsx  App.txt
app/spotify-plus-mood/: package.json
data/: last.txt  lsat.txt
scripts/: db_sb.py  kcluster.py  server 2.js  supbase 2.js
scripts/ml/: .decisiontree 2.ipynb.icloud  .main 2.ipynb.icloud  .mydecisiontree 2.png.icloud  .style 2.css.icloud  README.md  app 2.py  decisiontree.ipynb  main.ipynb  requirements.txt  style.css
scripts/ml/vite_vanilla_component/: __init__.py
spotipy-ext/: .README 2.rst.icloud  .pyproject 2.toml.icloud  pyproject.toml
spotipy-ext/spotipy_ext/: ..__main__ 2.py.icloud  .utils 2.py.icloud  .ytm 2.py.icloud  __init__.py  _functions.py
spotipy-ext/tests/: test_spotipy_ext 2.py
unheard/: requirements.txt
(+94 files in other folders)
